src/ui/popups/info.css
/**
 * Generic.
 */

body, button, input {
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
}

body {
	background-color: #fff;
	color: #212529;
	font-size: 13px;
	margin: 0px;
	overflow: hidden;
	padding: 0px;
	width: max-content;
}

a {
	color: #212529;
	text-decoration: none;
}

input {
	width: 199px;
}

/**
 * Containers.
 */

.main-container {
	display: grid;
	grid-template-columns: 136px 224px;
	min-height: 136px;
}

.popup-container {
	display: grid;
	grid-template-columns: 209px;
	grid-template-rows: auto auto;
	margin: 5px;
	margin-left: 10px;
}

.debug-container {
	margin-left: 10px;
	max-width: 360px;
}

/**
 * Controls.
 */

.album-art {
	grid-column: 1;
	grid-row: 1;
	height: 136px;
	width: 136px;
}

.edit-fields,
.info-fields {
	grid-column: 1;
	grid-row: 1;
	line-height: 1.4em;
}

.edit-controls {
	align-self: end;
	grid-column: 1;
	grid-row: 2;
	justify-self: start;
}

.artist, .album, .track {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.track {
	font-weight: 600;
}

.control-btn {
	background: none;
	border: none;
	color: #495053;
	cursor: pointer;
	font-family: 'Font Awesome 6 Free', serif;
	font-size: 1.1rem;
	outline: none;
	padding: 0;
	text-align: center;
	width: 1.3rem;
}

.control-btn[disabled] {
	cursor: default;
}

.control-btn:not([disabled]):hover::before {
	color: #247ba0;
}

.edit-btn::before {
	content: '\f044';
}

.revert-btn::before {
	content: '\f0e2';
}

.skip-btn::before,
.unskip-btn::before {
	content: '\f05e';
}

.skip-btn:hover:not([disabled])::before {
	color: #d51007;
}

.swap-btn::before {
	content: '\f2f1';
}

.submit-btn::before {
	content: '\f058';
}

.submit-btn:not([disabled]):hover::before {
	color: #65a858;
}

.unskip-btn::before {
	color: #d51007;
}

.unloved::before {
	content: '\f004';
}

.control-btn.unloved:hover::before {
	color: #d51007;
	content: '\f004';
}

.control-btn.loved::before {
	color: #d51007;
	content: '\f004';
}

.control-btn.loved:hover::before {
	color: #d51007;
	content: '\f7a9';
}

/**
 * Tags.
 */

.tags {
	margin-top: 5px;
	white-space: nowrap;
}

.tag {
	background-color: #247ba0;
	border-radius: 3px;
	color: white;
	display: inline-block;
	font-size: 12px;
	height: 20px;
	padding: 0 5px;
}

.counter::before {
	content: '\f202';
	font-family: 'Font Awesome 6 Brands', serif;
}

/**
 * Helpers.
 */

[hidden] {
	display: none !important;
}

[disabled] {
	color: #aaa;
}

